--- a/src/views/home.module.scss
+++ b/src/views/home.module.scss
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    font-size: 3.5em;
+    font-size: 3em;
     line-height: 0.85;
     color: var(--accent-9);
     width: 100%;
@@ -49,5 +49,9 @@
     top: 30%;
     z-index: -1;
     opacity: 0.5;
+  }
+
+  &__photo-container {
+    background-color: var(--accent-1);
   }
 }
